--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-google-signin-button-directive": "^1.0.3",
+    "vue-pdf": "^4.3.0",
+    "vue-pdf-app": "^2.1.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
